add swap module
